// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billing reducers UPDATE_INVOICE_IN_LIST should update an invoice in the list of invoices. (existing invoice) 1`] = `
Immutable.Map {
  "invoices": Immutable.List [
    Immutable.Map {
      "id": "in_1",
      "paid": false,
    },
    Immutable.Map {
      "id": "in_2",
      "paid": true,
    },
  ],
}
`;

exports[`billing reducers fetch invoices 1`] = `
Immutable.Map {
  "invoices": Immutable.List [
    Immutable.Map {
      "metadata": Immutable.Map {},
      "paid": true,
      "date": "2016-11-13T18:30:19+00:00",
      "amount_due": 1234,
    },
  ],
}
`;

exports[`billing reducers fetch current products usage 1`] = `
Immutable.Map {
  "currentProductsUsage": Immutable.Map {
    "helpdesk": Immutable.Map {
      "data": Immutable.Map {
        "extra_tickets_cost_in_cents": 0,
        "num_tickets": 2,
        "num_extra_tickets": 0,
      },
      "meta": Immutable.Map {
        "subscription_start_datetime": "2017-08-22T00:46:32+00:00",
        "subscription_end_datetime": "2017-09-05T00:46:32+00:00",
      },
    },
    "automation": Immutable.Map {
      "data": Immutable.Map {
        "extra_tickets_cost_in_cents": 0,
        "num_tickets": 2,
        "num_extra_tickets": 0,
      },
      "meta": Immutable.Map {
        "subscription_start_datetime": "2017-08-22T00:46:32+00:00",
        "subscription_end_datetime": "2017-09-05T00:46:32+00:00",
      },
    },
    "voice": null,
    "sms": null,
    "convert": null,
  },
}
`;
